[package]
name = "detour-sys"
version = "0.1.0"
edition = "2021"
description = "ffi bindings to recast navigation"
homepage = "https://github.com/0xFounders/detour-sys"
repository = "https://github.com/0xFounders/detour-sys"
license = "Zlib"

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.71"